@@ -549,6 +549,10 @@ PANOPTICON_MAIN_LBL_HEARTBEAT_HEAD=Automated tasks appear to be broken
 PANOPTICON_MAIN_LBL_HEARTBEAT_MESSAGE=It is more than a minute since the last time an automated task ran. You need to set up CRON jobs to run every minute.
 PANOPTICON_MAIN_LBL_HEARTBEAT_BTN_READ_INSTRUCTIONS=Read the instructions
 
+PANOPTICON_MAIN_LBL_FALL_BEHIND="Automated tasks are falling behind"
+PANOPTICON_MAIN_LBL_FALL_BEHIND_MESSAGE="Your automated tasks have been falling behind their scheduled time for an average of %d seconds. This means there is more work to be done than they can handle. You need to increase the number of CRON jobs you have set up."
+PANOPTICON_MAIN_LBL_FALL_BEHIND_READ_DOCS="Read the documentation"
+
 ;; Sites
 PANOPTICON_SITES_TITLE=Sites
 PANOPTICON_SITES_TITLE_NEW=Add a New Site
